[metadata]
name = samutil
version = 0.0.2
author = Sam McElligott
author_email = sammcelligott@outlook.com
description = A set of python utility classes to help develop and maintain quality software.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sammce/samutil
project_urls =
    Bug Tracker = https://github.com/sammce/samutil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src